# loggy

./: .gitignore  pyproject.toml  readme.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: dependabot_auto_merge.yaml  lint.yaml  security.yaml
loggy/: __init__.py  _levels.py  _logger.py  _record.py  log.py
loggy/util/: __init__.py  timer.py
